--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,10 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Run basic tests
         run: Tests\RunTests.ps1
       
@@ -48,10 +44,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Setup Repositories
         id: setup
         run: e2eTests\SetupRepositories.ps1 -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}'
@@ -63,12 +55,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Run tests
-        run: e2eTests\Test-AL-Go-pte.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}'
+        run: e2eTests\Test-AL-Go.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}'
 
   TestAlGoPteMultiProject:
     runs-on: [ windows-latest ]
@@ -77,12 +65,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Run tests
-        run: e2eTests\Test-AL-Go-pte.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}' -multiProject
+        run: e2eTests\Test-AL-Go.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}' -multiProject
 
   TestAlGoAppSource:
     runs-on: [ windows-latest ]
@@ -91,12 +75,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Run tests
-        run: e2eTests\Test-AL-Go-appSource.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}'
+        run: e2eTests\Test-AL-Go.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}' -appSourceApp
 
   TestAlGoAppSourceMultiProject:
     runs-on: [ windows-latest ]
@@ -105,12 +85,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
-
       - name: Run tests
-        run: e2eTests\Test-AL-Go-appSource.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}' -multiProject
+        run: e2eTests\Test-AL-Go.ps1 -github -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -template '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '' -licenseFileUrl '${{ Secrets.LicenseFileUrl }}' -multiProject -appSourceApp
 
   RemoveRepositories:
     runs-on: [ windows-latest ]
@@ -118,10 +94,6 @@ jobs:
     if: always() && ('${{ needs.SetupRepositories.result }}' == 'Success') && ('${{ needs.Test.outputs.orgpatset }}' == 'Yes')
     steps:
       - uses: actions/checkout@v2
-
-      - name: Rate Limits
-        run: |
-          ((Invoke-WebRequest -UseBasicParsing -Uri "https://api.github.com/rate_limit").Content | ConvertFrom-Json).rate | Out-Host
 
       - name: Remove Repositories
         run: e2eTests\RemoveRepositories.ps1 -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -actionsRepo '${{ needs.SetupRepositories.outputs.actionsRepo }}' -perTenantExtensionRepo '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -appSourceAppRepo '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}'
