--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -13,7 +13,7 @@ defaults:
     shell: PowerShell
 
 jobs:
-  Test:
+  Deploy:
     runs-on: [ windows-latest ]
     steps:
       - uses: actions/checkout@v2
@@ -37,5 +37,5 @@ jobs:
             }
             $settingsFile = Join-Path $settings.baseFolder "deploy.json"
             $settings | ConvertTo-Json | Set-Content $settingsFile -Encoding UTF8
-            . ".\Internal\Deploy.ps1") -configName $settingsFile -githubOwner $githubOwner -token $token -github
+            . ".\Internal\Deploy.ps1" -configName $settingsFile -githubOwner $githubOwner -token $token -github
           }
