--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -20,22 +20,27 @@ jobs:
 
       - name: Deploy
         run: |
-          $githubOwner = $ENV:GITHUB_REPOSITORY_OWNER
-          $token = ${{ Secrets.OrgPAT }}
-          if (!$token) {
-            Write-Host "::Error::No OrgPAT secret found"
-          }
-          else {
-            $settings = [ordered]@{
-                "githubOwner" = $githubOwner
-                "actionsRepo" = "AL-Go-Actions"
-                "perTenantExtensionRepo" = "AL-Go-PTE"
-                "appSourceAppRepo" = "AL-Go-AppSource"
-                "branch" = ${{ github.event.inputs.branch }}
-                "localFolder" = ""
-                "baseFolder" = [System.IO.Path]::GetTempPath()
+          try {
+            $githubOwner = "$ENV:GITHUB_REPOSITORY_OWNER"
+            $token = ${{ Secrets.OrgPAT }}
+            if (!$token) {
+              throw "No OrgPAT secret found"
             }
-            $settingsFile = Join-Path $settings.baseFolder "deploy.json"
-            $settings | ConvertTo-Json | Set-Content $settingsFile -Encoding UTF8
-            . ".\Internal\Deploy.ps1" -configName $settingsFile -githubOwner $githubOwner -token $token -github
+            else {
+              $settings = [ordered]@{
+                  "githubOwner" = $githubOwner
+                  "actionsRepo" = "AL-Go-Actions"
+                  "perTenantExtensionRepo" = "AL-Go-PTE"
+                  "appSourceAppRepo" = "AL-Go-AppSource"
+                  "branch" = ${{ github.event.inputs.branch }}
+                  "localFolder" = ""
+                  "baseFolder" = [System.IO.Path]::GetTempPath()
+              }
+              $settingsFile = Join-Path $settings.baseFolder "deploy.json"
+              $settings | ConvertTo-Json | Set-Content $settingsFile -Encoding UTF8
+              . ".\Internal\Deploy.ps1" -configName $settingsFile -githubOwner $githubOwner -token $token -github
+            }
+          }
+          catch {
+            Write-Host "::Error::Error deploying repositories. The error was $($_.Exception.Message)"
           }
