--- a/.github/workflows/Collect.yaml
+++ b/.github/workflows/Collect.yaml
@@ -22,6 +22,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: CheckUser
+        run: |
+          if ("$ENV:GITHUB_REPOSITORY" -eq "freddy/AL-Go" -and "$ENV:GITHUB_ACTOR" -eq "freddydk") {
+            Write-Host "::Error::You cannot run deploy and collect in the microsoft/AL-Go repo"
+          }
+
       - name: Collect
         run: |
           $ErrorActionPreference = "Stop"
