--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -24,6 +24,8 @@ jobs:
 
       - name: CheckUser
         run: |
+          Write-Host "$ENV:GITHUB_REPOSITORY"
+          Write-Host "$ENV:GITHUB_ACTOR"
           if ("$ENV:GITHUB_REPOSITORY" -eq "freddy/AL-Go" -and "$ENV:GITHUB_ACTOR" -eq "freddydk") {
             Write-Host "::Error::You cannot run deploy and collect in the microsoft/AL-Go repo"
           }
