--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -24,9 +24,7 @@ jobs:
 
       - name: CheckUser
         run: |
-          Write-Host "$ENV:GITHUB_REPOSITORY"
-          Write-Host "$ENV:GITHUB_ACTOR"
-          if ("$ENV:GITHUB_REPOSITORY" -eq "freddy/AL-Go" -and "$ENV:GITHUB_ACTOR" -eq "freddydk") {
+          if ("$ENV:GITHUB_REPOSITORY" -eq "freddydk/AL-Go" -and "$ENV:GITHUB_ACTOR" -eq "freddydk") {
             Write-Host "::Error::You cannot run deploy and collect in the microsoft/AL-Go repo"
           }
 
