--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           if ("$ENV:GITHUB_REPOSITORY" -eq "freddydk/AL-Go" -and "$ENV:GITHUB_ACTOR" -eq "freddydk") {
             Write-Host "::Error::You cannot run deploy and collect in the microsoft/AL-Go repo"
+            exit 1
           }
 
       - name: Deploy
