--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -62,6 +62,8 @@ jobs:
       - name: CalculateReleases
         id: calculateReleases
         run: |
+          Import-Module "e2eTests\e2eTestHelper.psm1" -DisableNameChecking
+          SetTokenAndRepository -githubOwner '${{ Secrets.githubOwner }}' -token '${{ Secrets.OrgPAT }}' -repository "$ENV:GITHUB_REPOSITORY" -github
           $releases = @(gh release list --repo $ENV:GITHUB_REPOSITORY | ForEach-Object { $_.split("`t")[0] })
           Write-Host "Releases: $($releases -join ', ')"
           if ($releases.Count -eq 1) {
